Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * debian/dpkg.conffiles: added missing file
  * debian/rules, main/main.c: rename dpkg configfile to dpkg.cfg

Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>

  * Create branch point for versioned provides
  * Revert patches for it from the HEAD

Sun 29 Oct 23:33:48 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: some corrections

Sun 29 Oct 01:47:59 CEST 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: translated readfail message parameters from extract.c

Sat Oct 28 15:41:04 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-genchanges.pl: make a missing package a warning instead
    of an error
  * dpkg-deb/extract.c: mark readfail message parameters as translateable

Wed Oct 25 00:14:06 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * po/nl.po: new Dutch translation from Ivo Timmermans
  * THANKS: add Ivo
  * configure.in: add nl to linguas

Thu Oct 19 00:59:40 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * utils/start-stop-daemon.c
    + fix a buffer overflow in cmdname handling
    + Only abort if we fail to open an existing pidfile
  * utils/start-stop-daemon.8: update formating 

Wed Oct 18 17:48:15 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.pl: patch from Colin Watson to not rename a
    file to itself

Mon Oct 16 10:45:47 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/packages.c: Hack up things so a package which
    provides/conflicts/replaces it's own virtual can be installed (can't
    be removed yet, but hey...)

Sat Oct  7 22:18:43 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 

  * po/gl.po, configure.in: add new Galish translation from  Alberto Garcia
  * po/pt_BR.po, configure.in: add new Brazilian translation from
    Carlos Laviola
  * THANKS: add Alberto and Carlos

Wed Oct  4 16:37:08 CEST 2000 Wichert Akkerman <wakkerma@debian.org> 
