@@ -2,6 +2,8 @@ Source: dpkg
 Section: base
 Priority: required
 Maintainer: Wichert Akkerman <wakkerma@debian.org>
+Origin: debian
+Bugs: debbugs://bugs.debian.org
 Standards-Version: 3.1.0
 Build-Depends: debiandoc-sgml, libncurses-dev
 
