@@ -1,1 +1,2 @@
 /etc/dpkg/dpkg.cfg
+/etc/dpkg/origins/debian
