@@ -37,7 +37,9 @@ const struct fieldinfo fieldinfos[]= {
   { "Priority",         f_priority,        w_priority                                 },
   { "Section",          f_section,         w_section                                  },
   { "Installed-Size",   f_charfield,       w_charfield,      PKGIFPOFF(installedsize) },
+  { "Origin",           f_charfield,       w_charfield,      PKGIFPOFF(origin)        },
   { "Maintainer",       f_charfield,       w_charfield,      PKGIFPOFF(maintainer)    },
+  { "Bugs",             f_charfield,       w_charfield,      PKGIFPOFF(bugs)          },
   { "Architecture",     f_charfield,       w_charfield,      PKGIFPOFF(architecture)  },
   { "Source",           f_charfield,       w_charfield,      PKGIFPOFF(source)        },
   { "Version",          f_version,         w_version                                  },
