@@ -45,11 +45,11 @@ Options:  -p<package>            print control file for package
 }
 
 $i=100;grep($fieldimps{$_}=$i--,
-          qw(Package Version Origin Section Priority Architecture Essential
+          qw(Package Version Section Priority Architecture Essential
              Pre-Depends Depends Recommends Suggests Enhances Optional 
-	     Conflicts Replaces Provides Installed-Size Maintainer Source
-	     Description Build-Depends Build-Depends-Indep Build-Conflicts
-	     Build-Conflicts-Indep Source Bugs-Submit-To ));
+	     Conflicts Replaces Provides Installed-Size Origin Maintainer
+	     Bugs Source Description Build-Depends Build-Depends-Indep
+	     Build-Conflicts Build-Conflicts-Indep ));
 
 while (@ARGV) {
     $_=shift(@ARGV);
@@ -111,7 +111,7 @@ for $_ (keys %fi) {
     $v= $fi{$_};
     if (s/^C //) {
 #print STDERR "G key >$_< value >$v<\n";
-        if (m/^Origin|Bugs-Submit-To|Maintainer$/) { $f{$_}=$v; }
+        if (m/^Origin|Bugs|Maintainer$/) { $f{$_}=$v; }
         elsif (m/^Source$/) { &setsourcepackage; }
         elsif (s/^X[CS]*B[CS]*-//i) { $f{$_}= $v; }
 	elsif (m/^X[CS]+-|^Standards-Version$|^Build-(Depends|Conflicts)(-Indep)?$/i) { }
