@@ -4,7 +4,7 @@ dpkg (1.7.0) unstable; urgency=low
     new dpkg-statoverride tool.
   * Use objdump instead of ldd in dpkg-shlibdeps
   * Fix logic in dpkg-shlibdeps so it looks for dependencies as specified
-    in the documentation
+    in its documentation
   * Make update-alternatives update slave links with --config and properly
     switch the alternative to manual mode
   * HURD updates, Closes: Bug#57753,#57754,#57755
@@ -18,7 +18,8 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-deb: reorder files when building a package
   * dpkg-statoverride: new tool to override ownership and modes for files
   * Check COLUMNS environment for dpkg -l output. Closes: Bug#65536
-  * Add Origin, Bugs-Submit-To, Bugs-Submit-Style
+  * Add Origin and Bugs fields to the control file
+  * Install new /etc/dpkg/origins/debian file
   * Corrections and updates to Swedish translation.
   * Add Galician, German, Dutch and Brazilian translations
   * archtable: add ia64 and sh; revert sparc64 so that it turns into sparc.
@@ -26,7 +27,7 @@ dpkg (1.7.0) unstable; urgency=low
   * dselect/main.cc: small fixups to get it to compile with gcc-2.96
   * Clean up fd handling in some places. Closes: Bug#69359,#69360,#69361
   * Document -k option for dpkg-buildpackage. Closes: Bug#71808
-  * Install dummy shlibs.default and shlibs.override files
+  * Install commented dummy shlibs.default and shlibs.override files
   * Give dpkg a configurationfile
   * dpkg-scanpackages now uses the most recent version if multiple versions
     of a package are found.
@@ -38,7 +39,7 @@ dpkg (1.7.0) unstable; urgency=low
   * Update formating of start-stop-daemon manpage. Closes: Bug#75110
   * Make a missing package a warning instead of an error in dpkg-genchanges
 
- -- Wichert Akkerman <wakkerma@debian.org>  Mon,  8 May 2000 16:08:53 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  Sun,  5 Nov 2000 17:28:39 +0100
 
 dpkg (1.6.13) frozen unstable; urgency=low
 
