@@ -2,6 +2,13 @@ Sun Nov  5 16:28:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/dpkg.conffiles: added missing file
   * debian/rules, main/main.c: rename dpkg configfile to dpkg.cfg
+  * debian/rules, debian/origin: add new origin file
+  * scripts/dpkg-gencontrol.pl: rename Bugs-Submit-To to Bugs
+  * debian/control: add Bugs and Origin entries
+  * lib/database.c, parse.c: add Origin and Bugs to fieldinfos table
+  * include/dpkg-db.h: add Origin and Bugs to pkginfoperfile struct
+  * dpkg-deb/main.c, dpkg-deb/dpkg-deb.h: fix type for compression
+  * Makefile.in: install origin file
 
 Sun Nov  5 10:00:31 EST 2000 Ben Collins <bcollins@debian.org>
 
